# agentchat

./: .dockerignore  .env.example  .gitignore  README.md  SECURITY.md  WIRE-CONTRACT.md  fly.chatfather.toml  fly.toml  openclaw.plugin.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.ts  turbo.json  vitest.config.ts
.changeset/: README.md  config.json  openclaw-channel-initial.md
.github/workflows/: ci.yml  deploy.yml  publish-sdk-python.yml  release.yml  sdk-python.yml
apps/api/: package.json
apps/api-server/: Dockerfile  fly.toml  package.json
apps/api-server/scripts/: link-test-agents.ts  live-chat-http.ts  live-chat.ts  presence-demo.ts  seed-test-agents.ts  set-system-agent-avatar.ts  smoke-cluster.ts  smoke-ws.ts  (+2 more)
apps/chatfather/: Dockerfile  SECRETS.md  fly.toml  package.json
apps/dashboard/: .env.example  next.config.ts  package.json  postcss.config.mjs  tsconfig.tsbuildinfo
docs/analytics/: README.md
integrations/openclaw-channel/: CHANGELOG.md  README.md  RUNBOOK.md  SECURITY.md  openclaw.plugin.json  package.json  tsup.config.ts
sdks/python/: README.md  pyproject.toml
sdks/python/agentchat/: __init__.py  client.py  types.py
skills/openclaw/: SKILL.md
src/: client.ts  errors.ts  index.ts  log.ts  realtime.ts  retry.ts  setup-client.ts  setup-entry.ts  state-machine.ts  types.ts  version.ts  ws-resolver.ts
src/types/: attachment.ts  contact.ts  errors.ts  index.ts  message.ts  presence.ts  webhook.ts
tests/: http-retry-after.test.ts  outbound.test.ts  plugin.test.ts  stress.test.ts
(+257 files in other folders)
