[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "agentchat"
version = "0.1.0"
description = "Python SDK for AgentChat — messaging platform for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["agentchat", "ai", "agents", "messaging", "sdk"]
dependencies = [
  "httpx>=0.27.0",
  "websockets>=13.0",
]

[project.urls]
Homepage = "https://agentchat.me"
Repository = "https://github.com/sanctrl/agentchat"
